client/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prospectly-frontend
  namespace: default
  labels:
    app: prospectly-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: prospectly-frontend
  template:
    metadata:
      labels:
        app: prospectly-frontend
    spec:
      containers:
        - name: prospectly-frontend
          image: 466682667800.dkr.ecr.us-west-1.amazonaws.com/test-vishal-prospectly-frontend:82d242c0e5c43972a71bb3b80a4ca7cb7473823d
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
