client/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prospectly-frontend
  namespace: default
  labels:
    app: prospectly-frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: prospectly-frontend
