client/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prospectly-frontend-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # Uncomment the below line if you are using cert-manager for TLS
    # cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  # Uncomment the below block if you have configured TLS
  # tls:
  #   - hosts:
  #       - learning-front.officebrain.com
  #     secretName: prospectly-frontend-tls
  rules:
    - host: learning-front.officebrain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prospectly-frontend
                port:
                  number: 80
